# Bachlor2025-Padel

./: .gitignore  docker-compose.yml
Backend/src/: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
Backend/src/app/: config.py  main.py
Backend/src/app/api/: routes.py
Backend/src/app/auth/: dependencies.py  firebase_service.py
Backend/src/app/business/: exceptions.py
Backend/src/app/business/services/: analysis_service.py  file_storage.py  interfaces.py  match_service.py  player_service.py  video_service.py
Backend/src/app/data/: connection.py
Backend/src/app/data/models/: __init__.py  analysis_model.py  match_model.py  player_model.py  video_model.py
Backend/src/app/data/repositories/: analysis_repository.py  base_repository.py  interfaces.py  match_repository.py  player_repository.py  summary_metrics_repository.py  video_repository.py
Backend/src/app/database/: connection.py
Backend/src/app/domain/: analysis.py  match.py  player.py  video.py
Backend/src/app/models/: database.py  schemas.py
Backend/src/app/presentation/controllers/: auth_controller.py  match_controller.py  player_controller.py  video_controller.py
Backend/src/app/presentation/dtos/: auth_dto.py  match_dto.py  player_dto.py  video_dto.py
Backend/src/scripts/: dev-setup.py
Backend/src/tests/: conftest.py
Backend/src/tests/unit/business/: test_match_service.py  test_player_service.py  test_video_service.py
Backend/src/tests/unit/presentation/: test_auth_controller.py  test_match_controller.py  test_video_controller.py
ML-Models/: README.md
(+27 files in other folders)
